<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginStart="8dp"
	        android:layout_marginTop="6dp"
	        android:layout_marginEnd="8dp"
	        android:padding="3dp"
	        android:textSize="18sp"
	        android:text="@string/help_brief_content"
	        android:textColor="#AA00AA" />

		<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginStart="8dp"
	        android:layout_marginTop="16dp"
	        android:layout_marginEnd="8dp"
	        android:padding="3dp"
	        android:textSize="18sp"
	        android:textStyle="bold"
	        android:text="@string/help_invitation_title" />
	    
	     <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginStart="8dp"
	        android:layout_marginTop="6dp"
	        android:layout_marginEnd="8dp"
	        android:padding="3dp"
	        android:textSize="18sp"
	        android:text="@string/help_invitation_content"
	        android:textColor="#00AA00" />
	     
	    <ImageView
	        android:src="@drawable/edward_weixin_qrcode"
	        android:contentDescription="@string/qrcode"
	        android:layout_marginStart="8dp"
	        android:layout_marginTop="8dp"
	        android:layout_marginEnd="8dp"
	        android:layout_width="218dp"
	        android:layout_height="218dp"
	        android:layout_gravity="center" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginStart="8dp"
	        android:layout_marginTop="8dp"
	        android:layout_marginEnd="8dp"
	        android:padding="3dp"
	        android:textSize="18sp"
	        android:textStyle="bold"
	        android:text="@string/help_email_settings_title" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginStart="8dp"
	        android:layout_marginTop="8dp"
	        android:layout_marginEnd="8dp"
	        android:padding="3dp"
	        android:textSize="18sp"
	        android:text="@string/help_email_settings_content" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginStart="8dp"
	        android:layout_marginTop="6dp"
	        android:layout_marginEnd="8dp"
	        android:padding="3dp"
	        android:textSize="18sp"
	        android:textStyle="bold"
	        android:text="@string/help_email_subscription_title" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginStart="8dp"
	        android:layout_marginTop="6dp"
	        android:layout_marginEnd="8dp"
	        android:padding="3dp"
	        android:textSize="18sp"
	        android:text="@string/help_email_subscription_content" />
    
    </LinearLayout>

</ScrollView>
